--- a/TraceIt/Views/SubjectSelectionPage.xaml
+++ b/TraceIt/Views/SubjectSelectionPage.xaml
@@ -24,68 +24,72 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="addButton" Text="+" Clicked="addButton_Clicked"/>
-        <ToolbarItem Text="X"/>
+        <ToolbarItem Text="X" x:Name="closeButton" Clicked="closeButton_Clicked"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout BackgroundColor="White"
-                        VerticalOptions="StartAndExpand"
-                        HorizontalOptions="FillAndExpand">
+        <AbsoluteLayout>
+            <StackLayout BackgroundColor="White" AbsoluteLayout.LayoutFlags="All"
+                         AbsoluteLayout.LayoutBounds="0, 0, 1, 0.85">
 
-            <SearchBar Placeholder="Search subjects"/>
+                <SearchBar Placeholder="Search subjects"/>
 
-            <listview:SfListView x:Name="subjectsListView" ItemSpacing="7"
+                <listview:SfListView x:Name="subjectsListView" ItemSpacing="7"
                                  SelectionMode="Multiple"
                                  ItemSize="50"
-                                 VerticalOptions="FillAndExpand"
+                                 VerticalOptions="StartAndExpand"
                                  HorizontalOptions="FillAndExpand"
-                                 Padding="20, 20, 10, 50">
+                                 Padding="10, 0, 10, 0" Margin="0, 0, 0, 0">
 
-                <listview:SfListView.ItemTemplate>
-                    <DataTemplate>
-                        <Frame BackgroundColor="#f5f5f5"
+                    <listview:SfListView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame BackgroundColor="#f5f5f5"
                                HasShadow="False"
                                Padding="20,10,0,10"
                                CornerRadius="20"
                                BorderColor="#dedede">
 
-                            <StackLayout>
-                                <Label Text="{Binding Name}" TextColor="Black"
+                                <StackLayout>
+                                    <Label Text="{Binding Name}" TextColor="Black"
                                        FontSize="16"
                                        VerticalOptions="CenterAndExpand"/>
-                            </StackLayout>
+                                </StackLayout>
 
-                        </Frame>
-                    </DataTemplate>
-                </listview:SfListView.ItemTemplate>
+                            </Frame>
+                        </DataTemplate>
+                    </listview:SfListView.ItemTemplate>
 
-                <listview:SfListView.SelectedItemTemplate>
-                    <DataTemplate>
-                        <Frame BackgroundColor="Orange"
+                    <listview:SfListView.SelectedItemTemplate>
+                        <DataTemplate>
+                            <Frame BackgroundColor="Orange"
                                HasShadow="False"
                                Padding="20,10,0,10"
                                CornerRadius="20"
                                BorderColor="#dedede">
 
-                            <StackLayout>
-                                <Label Text="{Binding Name}" TextColor="White"
+                                <StackLayout>
+                                    <Label Text="{Binding Name}" TextColor="White"
                                        FontSize="16"
                                        VerticalOptions="CenterAndExpand"/>
-                            </StackLayout>
+                                </StackLayout>
 
-                        </Frame>
-                    </DataTemplate>
-                </listview:SfListView.SelectedItemTemplate>
+                            </Frame>
+                        </DataTemplate>
+                    </listview:SfListView.SelectedItemTemplate>
 
-            </listview:SfListView>
+                </listview:SfListView>
+            </StackLayout>
 
             <button:SfButton x:Name="buttonConfirm"
                              Text="CONFIRM"
                              CornerRadius="25,25,0,0"
-                             Clicked="buttonConfirm_Clicked">
-                
+                             Clicked="buttonConfirm_Clicked" 
+                             AbsoluteLayout.LayoutFlags="WidthProportional,PositionProportional"
+                             AbsoluteLayout.LayoutBounds="1, .96, 1, 50"
+                             AnchorY="1">
+
                 <button:SfButton.BackgroundGradient>
-                    <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 0.65">
+                    <gradient:SfLinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
                         <gradient:SfLinearGradientBrush.GradientStops>
                             <gradient:SfGradientStop Color="#0012FF" Offset="0.0"/>
                             <gradient:SfGradientStop Color="#000B98" Offset="1.0"/>
@@ -93,7 +97,7 @@
                     </gradient:SfLinearGradientBrush>
                 </button:SfButton.BackgroundGradient>
             </button:SfButton>
-
-        </StackLayout>
+            
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
