--- a/TraceIt/App.xaml
+++ b/TraceIt/App.xaml
@@ -69,6 +69,7 @@
                         </LinearGradientBrush>
                     </Setter.Value>
                 </Setter>
+                <Setter Property="HasShadow" Value="False"/>
             </Style>
 
             <Style TargetType="gradient:SfGradientView" x:Key="subjectItemGradient">
