--- a/TraceIt/Views/Data Templates/SubjectDataTemplate.xaml
+++ b/TraceIt/Views/Data Templates/SubjectDataTemplate.xaml
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ViewCell xmlns="http://xamarin.com/schemas/2014/forms" 
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TraceIt.Views.Data_Templates.SubjectDataTemplate">
-    <ViewCell.View>
-        <StackLayout>
-            <Label Text="Hello Xamarin.Forms!" />
-        </StackLayout>
-    </ViewCell.View>
-</ViewCell>
+
+    <Frame BackgroundColor="#f5f5f5"
+               HasShadow="False"
+               Padding="20,10,0,10"
+               CornerRadius="20"
+               BorderColor="#dedede">
+
+        <Label Text="{Binding Name}" TextColor="Black"
+                   FontSize="16"
+                   VerticalOptions="CenterAndExpand"/>
+
+    </Frame>
+    
+</ContentView>
