--- a/TraceIt/Views/StandardCategorisedDetailPage.xaml
+++ b/TraceIt/Views/StandardCategorisedDetailPage.xaml
@@ -2,11 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:xforms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
-             x:Class="TraceIt.Views.StandardCategorisedDetailPage">
+             x:Class="TraceIt.Views.StandardCategorisedDetailPage"
+             x:Name="myLayout">
 
     <ContentPage.Content>
       <StackLayout>
-            <xforms:SfListView x:Name="categorisedStandardsList" VerticalOptions="Fill" ItemSize="80">
+            <xforms:SfListView x:Name="categorisedStandardsList" VerticalOptions="Fill" ItemSize="80"
+                               ItemTapped="categorisedStandardsList_ItemTapped">
                 <xforms:SfListView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
