--- a/TraceIt/Views/StandardCategorisedPage.xaml
+++ b/TraceIt/Views/StandardCategorisedPage.xaml
@@ -59,7 +59,7 @@
             <DataTemplate x:Key="subfieldTemplate">
                 <Frame BackgroundColor="#f5f5f5"
                HasShadow="False"
-               Padding="20,10,0,10"
+               Padding="20,20,0,20"
                CornerRadius="20"
                BorderColor="#dedede">
 
@@ -75,7 +75,7 @@
             <DataTemplate x:Key="subjectTemplate">
                 <Frame BackgroundColor="#f5f5f5"
                HasShadow="False"
-               Padding="20,10,0,10"
+               Padding="20,20,0,20"
                CornerRadius="20"
                BorderColor="#dedede">
 
@@ -141,7 +141,7 @@
                                   ItemSpacing="8"
                                   ItemTapped="collectionViewCategories_ItemTapped"
                                   ItemTemplate="{StaticResource dataTemplateSelector}"
-                                  AutoFitMode="DynamicHeight"/>
+                                  AutoFitMode="DynamicHeight" SelectionMode="None"/>
             </StackLayout>
 
         </StackLayout>
