--- a/TraceIt/Views/Charts/MainChartsPage.xaml
+++ b/TraceIt/Views/Charts/MainChartsPage.xaml
@@ -10,7 +10,8 @@
              xmlns:buttons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
              mc:Ignorable="d"
              x:Class="TraceIt.Views.Charts.MainChartsPage"
-             Title="Progress">
+             Title="Progress"
+             BackgroundColor="Black">
 
     <ContentPage.Resources>
         <ResourceDictionary>
