--- a/TraceIt/Views/StandardCategorisedDetailPage.xaml
+++ b/TraceIt/Views/StandardCategorisedDetailPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:xforms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              x:Class="TraceIt.Views.StandardCategorisedDetailPage"
-             x:Name="myLayout">
+             x:Name="myLayout"
+             BackgroundColor="Black">
 
     <ContentPage.Resources>
         <ResourceDictionary>
